<package format="3">
  <name>point_cloud_transport</name>

  <version>1.0.11</version>

  <description>
    Support for transporting PointCloud2 messages in compressed format and plugin interface for implementing additional PointCloud2 transports.
  </description>

  <author>Jakub Paplham</author>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernández</maintainer>
  <maintainer email="john.dangelo@tailos.com">John D'Angelo</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/ctu-vras/point_cloud_transport</url>
  <url type="bugtracker">https://github.com/ctu-vras/point_cloud_transport/issues</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>message_filters</depend>
  <depend>pybind11</depend>
  <depend>pybind11_vendor</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>git</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
