<package>
    <name>point_cloud_transport_test</name>
    <version>0.0.0</version>
    <description> placeholder </description>
    <author> placeholder </author>
    <maintainer email="paplhjak@fel.cvut.cz">Jakub Paplham</maintainer>
    <license> placeholder </license>

    <build_depend>point_cloud_transport</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>rosbag</build_depend>

    <run_depend>point_cloud_transport</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>rosbag</run_depend>


    <buildtool_depend>catkin</buildtool_depend>
</package>
